k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snap2spoon
  labels:
    app.kubernetes.io/part-of: snap2spoon
